--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,30 +1,30 @@
 # Common
 random_seed: 42
 
-learning_rate: 0.001 # Input model's learning rate
+learning_rate: 0.0001 # Input model's learning rate
 
 model_type: 'Pytorch' # This value should be maintained
 model:
-  _target_: model name # Input your custom model
-  output_size: 10 # Input your model's output size (only classification)
+  _target_: models. Mental_CNNGRU  #Input your custom model
+  output_size: 1 # Input your model's output size (only classification) 
 
 dataset:
-    name: 'dataset name' # Input your data name
+    name: 'safer_dong' # Input your data name
     validation_split: 0.2 # Ratio of dividing train data by validation
 
 # client
-task_id: 'podname' # Input your Task Name that you register in FedOps Website
+task_id: 'safer_01' # Input your Task Name that you register in FedOps Website
 
 wandb: 
-  use: false # Whether to use wandb
-  key: 'your wandb api key' # Input your wandb api key
-  account: 'your wandb account' # Input your wandb account
+  use: True # Whether to use wandb
+  key: '38f6cf3c2c37660d42ebfe8ab434b72d34be3b31' # Input your wandb api key
+  account: 'rirakang' # Input your wandb account
   project: '${dataset.name}_${task_id}'
 
 
 # server
 num_epochs: 1 # number of local epochs
-batch_size: 128
+batch_size: 16
 num_rounds: 2 # Number of rounds to perform
 clients_per_round: 1 # Number of clients participating in the round
 
